--- a/pixi.toml
+++ b/pixi.toml
@@ -11,6 +11,8 @@ version = "0.1.0"
 python = "*"
 pandas = ">=2.3.1,<3"
 snakemake = ">=7.32.4,<10"
+ydata-profiling = ">=4.16.0,<5"
+numpy = ">=2.1.3,<3"
 
 [feature.reporting.dependencies]
 python = ">=3.7,<3.11"
