--- a/pixi.toml
+++ b/pixi.toml
@@ -13,6 +13,7 @@ pandas = ">=2.3.1,<3"
 snakemake = ">=7.32.4,<10"
 ydata-profiling = ">=4.16.0,<5"
 numpy = ">=2.1.3,<3"
+mamba = ">=2.3.1,<3"
 
 [feature.reporting.dependencies]
 python = ">=3.7,<3.11"
@@ -27,6 +28,7 @@ pandas = "*"
 numpy = "*"
 matplotlib = "*"
 snakemake = "*"
+mamba = "*"
 
 [environments]
 reporting = ["reporting"]
